--- a/zelda/M04/css/style.css
+++ b/zelda/M04/css/style.css
@@ -1,7 +1,299 @@
 /*General -----------------------------------------------*/
+body{
+    width: 100%;
+    background-image: url(../img/portada_zelda.jpg), url(../img/fondo.png);
+    background-position: 0 0, 0 0;
+    background-repeat: no-repeat, repeat;
+    background-size: 100% auto; 
+    background-position: center top; 
+    background-color: #495c45;
+    margin: 0 auto;
+}
+
+h1,h2,h3,h4{
+    color : white;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+h3{
+    font-size: 50px;
+    margin-top: 85px;
+}
+
+h4{
+    font-size: 40px;
+    margin: 0;
+}
+/*font-family: 'Noto Sans Tifinagh', sans-serif;*/
 #wrapper{
     max-width: 1140px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+}
+
+ul{
+    padding: inherit;
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
+
+p{
+    font-size: 20px;
+    color: white;
+    margin: 0;
+    font-family: 'DM Sans', sans-serif;
+}
+
+/* MENU --------------------------------------*/
+
+nav hr{
+    width: 100%;
+    height: 100%;
+    margin: 0%;
+}
+header{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+nav ul {
+    margin: 34% 0% 0% 0%;
+    background-color: #2d372b;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 50px;
+}
+nav a{
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;
+    background: linear-gradient(to right, white 50%, #ffe621 50%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: background-position 0.15s ease;
+    background-size: 200% 100%;
+}
+nav a:hover{
+    background-position: -100% 0; 
+}
+
+/* Index --------------------------------------*/
+#historia {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+#historia h1{
+    margin: 50px 0px;
+    text-align: center;
+}
+
+#historia p{
+    font-size: 20px;
+    margin: 50px 31% 0px 0%;    
+}
+
+#img_historia {
+    position: absolute;
+    padding-top: 70px;
+    padding-left: 175px;
+    z-index: -1;
+}
+
+#jugabilidad p{
+    margin: 50px 31% 0px 0%;    
+}
+
+#jugabilidad h3{
+    font-size: 50px;
+    margin-top: 85px;
+}
+
+#img_jugabilidad {
+    position: absolute;
+    width: 1140px;
+    z-index: -1;
+}
+
+#img_jugabilidad img{
+    position: absolute;
+    padding-top: 45px;
+    width: 1140px;
+    z-index: -1;
+}
+
+/* Tutorial --------------------------------------*/
+
+#tutorial {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+#tutorial p{
+    margin: 35px 0% 35px 0%;    
+}
+
+#tutorial h3{
+    font-size: 50px;
+    margin-top: 85px;
+}
+
+#mapa h2{
+    color: #ffe621;
+}
+
+#tutorial h4{
+    margin-top: 30px;
+    padding: 25px 24px 10px;
+    background-color: #2d372b;
+}
+
+#tutorial img{
+    width: 60%;
+    margin: 0 auto;
+}
+
+#mapa{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#mapa div{
+    width: 45%;
+}
+
+#mapa div img{
+    width: 100%;
+}
+
+#interaciones_texto p {
+    margin: 0px 0% 20px 0%;
+}
+
+#interaciones_texto li{
+    display: flex;
+    margin: 0px 0% 40px 10%;
+    flex-direction: column;
+}
+
+#interaciones_texto img{
+    width: 60px;
+    margin: 0 auto;
+}
+
+/* nosotros --------------------------------------*/
+
+#nosotros div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#nosotros img{
+    width: 50%;
+}
+
+#nosotros h4{
+    width: 100%;
+    margin: 30px 0% 30px 0%;
+    padding: 25px 24px 10px;
+    background-color: #2d372b;
+}
+
+.texto_nosotros{
+    width: 50%;
+}
+
+#nosotros .texto_nosotros img{
+    width: 50px;
+}
+
+.texto_nosotros ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.texto_nosotros li{
+    margin-left: 120px;
+    display: flex;
+    width: 100%;
+}
+
+#nosotros p{
+    padding-top: 10px;
+    font-size: 30px;
+}
+
+/* Footer --------------------------------------*/
+
+footer{
+    height: 300px;
+    margin-top: 190px;
+    background-color: #2d372b;
+}
+
+#pie{
+    display: flex;
+    width: 1140px;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#pie p{
+    margin: 0 auto;
+}
+
+#pie img{
+    height: 250px;
+    width: 200px;
+    margin: 0 auto;
+}
+
+/* movil --------------------------------------*/
+
+@media only screen and (max-width: 768px){
+    #wrapper{
+        width: 95%;
+        padding: 0px 20px;
+    }
+
+    /* menu --------------------------------------*/
+    nav ul{
+        margin: 30% 0% 0% 0%;
+    }
+    #img_historia img{
+        width: 100%;
+    }
+    #img_historia {
+        padding-top: 290px;
+        padding-left: unset;
+    }
+    #img_jugabilidad img{
+        width: 100%;
+    }
+    #img_jugabilidad{
+        width: 100%;
+    }
+    /* nosotros --------------------------------------*/
+    .texto_nosotros li{
+        margin-left: 20px;
+    }
+    #nosotros p{
+        font-size: 25px;
+    }
+    /* footer --------------------------------------*/
+    #pie{
+        width: 100%;
+    }
 }
